--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["node"],
+    "types": ["node", "vite-plugin-svgr/client"],
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES5",
     "useDefineForClassFields": true,
@@ -34,6 +34,6 @@
     "noUncheckedIndexedAccess": true, // dynamic fields: obj.key => obj['key'].length
     "noImplicitReturns": false // all returns - not toggled
   },
-  "include": ["src/", "index.tsx"],
+  "include": ["src/", "index.tsx", "src/custom.d.ts"],
   "exclude": ["node_modules/"]
 }
