--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vite-plugin-svgr": "^4.3.0"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
