--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-search-app",
+  "name": "github-user-search",
   "private": true,
   "version": "1.0.0",
   "author": {
@@ -7,7 +7,7 @@
     "email": "leograndprix@gmail.com",
     "url": "https://leograndprix.ru"
   },
-  "homepage": "https://github.com/Leogrand20/user-search-app",
+  "homepage": "https://github.com/Leogrand20/github-user-search",
   "categories": [
     "Other"
   ],
