--- a/package.json
+++ b/package.json
@@ -15,27 +15,37 @@
   "main": "index.tsx",
   "type": "module",
   "scripts": {
+    "clear": "rd /s /q dist",
     "dev": "vite --host --port 8000 --open",
     "build": "tsc -b && vite build",
     "preview": "vite preview --open",
-    "bp": "tsc -b && vite build&&vite preview --host --port 4000 --open",
+    "buildpreview": "tsc -b && vite build&&vite preview --host --port 4000 --open",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@eslint/css": "^0.7.0",
-    "@eslint/js": "^9.26.0",
-    "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
+    "@eslint/css": "^0.8.1",
+    "@eslint/js": "^9.27.0",
+    "@types/node": "^22.15.19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
-    "eslint": "^9.26.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.3.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.0.0",
-    "sass": "^1.87.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^16.1.0",
+    "jiti": "^2.4.2",
+    "sass": "^1.89.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.1",
-    "vite": "^6.3.4",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
     "vite-plugin-cp": "^6.0.3",
     "vite-plugin-html-template-mpa": "^1.0.29",
     "vite-plugin-inspect": "^11.0.1",
