--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview --open",
     "buildpreview": "tsc -b && vite build&&vite preview --host --port 4000 --open",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@eslint/css": "^0.8.1",
